<resources>
    <string name="home_indicator">bottom_point</string>
    <string name="wallpaper_scrolling">all</string>
    <string name="flash_device">/sys/class/leds/flashlight/brightness</string>
    <string name="lunar_calendar">农历</string>
    <string name="lunar_zheng">正</string>
    <string name="lunar_leap">闰</string>
    <string name="lunar_ling">O</string>
    <string name="lunar_yi">一</string>
    <string name="lunar_er">二</string>
    <string name="lunar_san">三</string>
    <string name="lunar_si">四</string>
    <string name="lunar_wu">五</string>
    <string name="lunar_liu">六</string>
    <string name="lunar_qi">七</string>
    <string name="lunar_ba">八</string>
    <string name="lunar_jiu">九</string>
    <string name="lunar_shi">十</string>
    <string name="lunar_shi_yi">十一</string>
    <string name="lunar_shi_er">十二</string>
    <string name="lunar_chu_shi">初十</string>
    <string name="lunar_er_shi">二十</string>
    <string name="lunar_san_shi">三十</string>
    <string name="lunar_chu">初</string>
    <string name="lunar_nian">廿</string>
    <string name="lunar_yue">月</string>
    <string name="lunar_year">年</string>
    <string name="the_spring_festival">春节</string>
    <string name="lantern_festival">元宵节</string>
    <string name="the_dragon_boat_festival">端午节</string>
    <string name="double_seventh_day">七夕</string>
    <string name="the_mid_autumn_festival">中秋节</string>
    <string name="the_double_ninth_festival">重阳节</string>
    <string name="the_laba_rice_porridge_festival">腊八</string>
    <string name="new_years_day">元旦</string>
    <string name="valentines_day">情人节</string>
    <string name="international_womens_day">妇女节</string>
    <string name="arbor_day">植树节</string>
    <string name="fools_day">愚人节</string>
    <string name="labour_day">劳动节</string>
    <string name="chinese_youth_day">青年节</string>
    <string name="childrens_day">儿童节</string>
    <string name="partys_day">建党节</string>
    <string name="the_armys_day">建军节</string>
    <string name="teachers_day">教师节</string>
    <string name="national_day">国庆节</string>
    <string name="christmas_day">圣诞节</string>
    <string name="peace_day">和平紀念</string>
    <string name="national_father_day">國父誕辰</string>
    <string name="slight_cold">小寒</string>
    <string name="great_cold">大寒</string>
    <string name="spring_begins">立春</string>
    <string name="the_rains">雨水</string>
    <string name="insects_awaken">惊蛰</string>
    <string name="vernal_equinox">春分</string>
    <string name="clear_and_bright">清明</string>
    <string name="grain_rain">谷雨</string>
    <string name="summer_begins">立夏</string>
    <string name="grain_buds">小满</string>
    <string name="grain_in_ear">芒种</string>
    <string name="summer_solstice">夏至</string>
    <string name="slight_heat">小暑</string>
    <string name="great_heat">大暑</string>
    <string name="autumn_begins">立秋</string>
    <string name="stopping_the_heat">处暑</string>
    <string name="white_dews">白露</string>
    <string name="autumn_equinox">秋分</string>
    <string name="cold_dews">寒露</string>
    <string name="hoar_frost_falls">霜降</string>
    <string name="winter_begins">立冬</string>
    <string name="light_snow">小雪</string>
    <string name="heavy_snow">大雪</string>
    <string name="winter_solstice">冬至</string>
    <string name="chinese_date_unit">年月日</string>
    <string name="status_bar_date_formatter">%2$s</string>
    <string name="status_bar_toggle_advanced_sync_action">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_data_action">com.android.phone/.Settings</string>
    <string name="status_bar_toggle_divider_action">com.android.systemui/.settings.StyleSettings</string>
    <string name="status_bar_toggle_bluetooth_action">com.android.settings/com.android.settings.bluetooth.BluetoothSettings</string>
    <string name="status_bar_toggle_brightness_action">com.android.settings/com.android.settings.DisplaySettings</string>
    <string name="status_bar_toggle_flight_mode_action">com.android.settings/.WirelessSettings</string>
    <string name="status_bar_toggle_gps_action">com.android.settings/com.android.settings.SecuritySettings</string>
    <string name="status_bar_toggle_mute_action">com.android.settings/com.android.settings.SoundSettings</string>
    <string name="status_bar_toggle_network_type_action">com.android.phone/.MiuiPreferredNetworkTypeListPreference</string>
    <string name="status_bar_toggle_rotate_action">com.android.settings/com.android.settings.DisplaySettings</string>
    <string name="status_bar_toggle_sync_action">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_vibrate_action">com.android.settings/com.android.settings.SoundSettings</string>
    <string name="status_bar_toggle_wifi_action">com.android.settings/com.android.settings.wifi.WifiSettings</string>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="theme_process">com.miui.mihome.thememanager</string>
    <string name="lockscreen_process">com.miui.mihome.lockscreen</string>
    <string name="photoframe_process">com.miui.mihome.photoframe</string>
    <string name="share_process">com.miui.mihome.share</string>
    <string name="durationformatshort">%2$2d:%5$02d</string>
    <string name="durationformatshort_padding_with_0">%2$02d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="status_bar_date_formatter_ics">%2$s</string>
    <string name="status_bar_toggle_advanced_sync_action_ics">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_data_action_ics">com.android.phone/.Settings</string>
    <string name="status_bar_toggle_divider_action_ics">com.android.systemui/.settings.StyleSettings</string>
    <string name="status_bar_toggle_bluetooth_action_ics">com.android.settings/com.android.settings.Settings$BluetoothSettingsActivity</string>
    <string name="status_bar_toggle_brightness_action_ics">com.android.settings/com.android.settings.Settings$DisplaySettingsActivity</string>
    <string name="status_bar_toggle_flight_mode_action_ics">com.android.settings/com.android.settings.Settings$WirelessSettingsActivity</string>
    <string name="status_bar_toggle_gps_action_ics">com.android.settings/com.android.settings.Settings$LocationSettingsActivity</string>
    <string name="status_bar_toggle_mute_action_ics">com.android.settings/com.android.settings.Settings$SoundSettingsActivity</string>
    <string name="status_bar_toggle_network_type_action_ics">com.android.phone/.MiuiPreferredNetworkTypeListPreference</string>
    <string name="status_bar_toggle_rotate_action_ics">com.android.settings/com.android.settings.Settings$DisplaySettingsActivity</string>
    <string name="status_bar_toggle_sync_action_ics">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_vibrate_action_ics">com.android.settings/com.android.settings.Settings$SoundSettingsActivity</string>
    <string name="status_bar_toggle_wifi_action_ics">com.android.settings/com.android.settings.Settings$WifiSettingsActivity</string>
    <string name="log_file">Export log file</string>
    <string name="log_file_summary">Log file will export to /MIUI/Debug directory in SDcard</string>
    <string name="export_successfully">Export successfully!</string>
    <string name="export_failed">Export failed!</string>
    <string name="app_locker_name">MiLocker</string>
    <string name="resource_none">None</string>
    <string name="description_resolution">Resolution:</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="savingImage">Setting wallpaper…</string>
    <string name="runningFaceDetection">Please wait…</string>
    <string name="error_unkown_exception">unknown error</string>
    <string name="error_out_of_memory">out of memory</string>
    <string name="no_advance_lockscreen_res">The theme is not readable, please select another.</string>
    <string name="menu_general_settings">General settings</string>
    <string name="not_support_sdk_version">"Sorry, program can't run on the current android version!"</string>
    <string name="insert_sd_card">Please insert SD card!</string>
    <string name="resolution_not_support">This theme may not automatically fit your screen resolution, do you wish to go on?</string>
    <string name="general_settings_label">General settings</string>
    <string name="personal_settings_title">Customization</string>
    <string name="other_settings_title">Others</string>
    <string name="lockscreen_enable">Enable MiLocker</string>
    <string name="lockscreen_wallpaper_setting">Set lockscreen wallpaper</string>
    <string name="label_about">About</string>
    <string name="label_feedback">Feedback</string>
    <string name="about_detail_1">Tired of stereotyped lockscreens?</string>
    <string name="about_detail_2">MiLocker offers you ever-changing lockscreens including side slip, vertical slip, multiple-point unlocking, and even animation unlocking.</string>
    <string name="about_detail_3">"MIUI has the world's leading lockscreen theme library as well as talented designer users. Whether you are a designer or a mobile user, nothing but your imagination limits you."</string>
    <string name="about_detail_4">"For more information, please visit
http://www.miui.com"</string>
    <string name="label_tip">Tip</string>
    <string name="label_tip_detail">Press [Back] and [Volume+] at the same time to unlock if you could not unlock normally.</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="long_ringtone_resource">Long(>5sec)</string>
    <string name="short_ringtone_resource">Short(&lt;5sec)</string>
    <string name="all_ringtone_resource">All</string>
    <string name="cancel_action">Cancel</string>
    <string name="editing_tips">Add or Edit widget</string>
    <string name="pref_more_function_title">Advanced features</string>
    <string name="pref_backup_restore_title">Backup and Restore</string>
    <string name="pref_share_launcher_title">Show launcher</string>
    <string name="pref_common_setting_title">Common settings</string>
    <string name="pref_launcher_setting">Launcher</string>
    <string name="pref_locker_setting">Locker</string>
    <string name="pref_ringtone_setting">Ringtone</string>
    <string name="pref_about_help_title">About</string>
    <string name="dismiss_text_name">Dismiss</string>
    <string name="btn_recharge_large">Recharge now</string>
    <string name="recharge_other">Select other recharge methods</string>
    <string name="paytool_picker_hint">Please select the recharge Mi Credit amount</string>
    <string name="paytool_edit_hint">Recharge amount (RMB):</string>
    <string name="prepaid_picker_hint_1_1">1.</string>
    <string name="prepaid_picker_hint_1_2">Only supports one-time charge;</string>
    <string name="prepaid_picker_hint_2_1">2.</string>
    <string name="prepaid_picker_hint_2_2_a">Selected nominal value must be consistent with that of prepaid card, otherwise it will result in money loss.</string>
    <string name="prepaid_number_edit_hint">Number :</string>
    <string name="prepaid_password_edit_hint">Password:</string>
    <string name="prepaid_edit_limit">digits</string>
    <string name="account_hint_text">Email/Phone number</string>
    <string name="login">Sign in</string>
    <string name="next">Next</string>
    <string name="prev">Back</string>
    <string name="forget_password"><u>Forget password</u></string>
    <string name="password">Password</string>
    <string name="micloud_input_email_prompt">Input your email</string>
    <string name="micloud_email">Email Address</string>
</resources>