<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="@dimen/common_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.xiaomi.xmsf.payment.DenominationSpinner android:gravity="center" android:id="@id/denomination" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/editor_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prepaid_number_edit_hint" />
        <EditText android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:id="@id/number_edit" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/prepaid_edit_limit" android:ems="10" android:layout_weight="1.0" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/editor_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prepaid_password_edit_hint" />
        <EditText android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:id="@id/password_edit" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/prepaid_edit_limit" android:ems="10" android:layout_weight="1.0" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="10.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prepaid_picker_hint_1_1" />
            <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/prepaid_picker_hint_1_2" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prepaid_picker_hint_2_1" />
            <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:id="@id/prepaid_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/prepaid_picker_hint_2_2_a" />
        </LinearLayout>
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <Button android:textColor="@color/text_color_white" android:id="@id/button_recharge" android:background="@drawable/btn_pay_orange_bkg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btn_recharge_large" />
    <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_orange" android:layout_gravity="center" android:id="@id/recharge_other" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip" android:text="@string/recharge_other" />
</LinearLayout>