<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher2.DeleteZone android:layout_gravity="top" android:orientation="horizontal" android:id="@id/delete_zone" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.launcher2.UninstallDialog android:id="@id/uninstall_dialog" android:background="@drawable/uninstall_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <include android:id="@id/icon" android:layout_width="@dimen/workspace_cell_width" android:layout_height="@dimen/workspace_cell_width" layout="@layout/application" />
                <LinearLayout android:layout_gravity="left|center" android:orientation="vertical" android:id="@id/messages" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/UninstallDialog.Title" />
                    <TextView android:id="@id/uninstall_message" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/UninstallDialog.Message" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_gravity="bottom|center" android:orientation="horizontal" android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@drawable/uninstall_dialog_btn_divider" android:showDividers="middle">
                <Button android:id="@id/btnCancel" android:background="@drawable/uninstall_dialog_cancel_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel_action" style="@style/UninstallDialog.Button" />
                <Button android:id="@id/btnOk" android:background="@drawable/uninstall_dialog_confirm_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/UninstallDialog.Button" />
            </LinearLayout>
        </LinearLayout>
    </com.android.launcher2.UninstallDialog>
    <FrameLayout android:id="@id/indicate_panel" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/trash_zone_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="top|center" android:id="@id/trash" android:paddingTop="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/icon_title_text" android:layout_gravity="top|center" android:id="@id/dismiss_text" android:paddingLeft="2.0dip" android:paddingTop="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dismiss_text_name" />
        </LinearLayout>
        <TextView android:layout_gravity="top|center" android:id="@id/editing_tips" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editing_tips" style="@style/WorkspaceIconTitle.notification" />
    </FrameLayout>
</com.android.launcher2.DeleteZone>